--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "moment": "^2.20.1",
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
+    "prop-types": "^15.7.2",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-immutable-proptypes": "^2.1.0",
