--- a/package.json
+++ b/package.json
@@ -3,26 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.31",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
     "firebase": "^5.0.4",
     "immutable": "^3.8.2",
     "moment": "^2.20.1",
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
-    "prop-types": "^15.7.2",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-immutable-proptypes": "^2.1.0",
     "react-redux": "^5.0.5",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "1.1.4",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0",
-    "typescript": "^4.2.2"
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/styles/style.scss -o src/styles",
@@ -35,7 +29,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "eslint": "7.11.0",
+    "eslint": "4.9.0",
     "eslint-config-airbnb": "16.1.0",
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "6.0.2",
