--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,10 @@
 {
-    "extends": "airbnb"
-  }
+    "extends": "airbnb",
+    "rules": {
+        "jsx-a11y/label-has-for": [ 2, {
+            "required": {
+                "every": [ "id" ]
+            }
+        }]
+    }
+}
