--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.3.1",
     "firebase": "^8.2.10",
     "immutable": "^3.8.2",
     "moment": "^2.20.1",
