--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@sentry/react": "^6.3.4",
+    "@sentry/tracing": "^6.3.4",
     "classnames": "^2.3.1",
     "firebase": "^8.2.10",
     "immutable": "^3.8.2",
