--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.0.2",
+    "@types/react": "^17.0.5",
+    "@types/react-dom": "^17.0.3",
     "classnames": "^2.3.1",
     "firebase": "^8.2.10",
     "immutable": "^3.8.2",
@@ -17,8 +21,9 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "4.0.3",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.2.0",
+    "typescript": "^4.2.4"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/styles/style.scss -o src/styles",
@@ -31,6 +36,8 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
     "eslint": "7.11.0",
     "eslint-config-airbnb": "16.1.0",
     "eslint-plugin-import": "2.7.0",
