dependency updates + lint fixes

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,9 @@
 {
     "extends": "airbnb",
     "rules": {
-        "jsx-a11y/label-has-for": [ 2, {
-            "required": {
-                "every": [ "id" ]
-            }
+        "jsx-a11y/label-has-associated-control": [ 2, {
+            "assert": "either",
+            "depth": 3
         }],
         "linebreak-style": 0
     }
