--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
     "prop-types": "^15.7.2",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-immutable-proptypes": "^2.1.0",
-    "react-redux": "^5.0.5",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
+    "react-redux": "^7.2.4",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.2.0",
@@ -38,11 +38,12 @@
   "devDependencies": {
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
-    "eslint": "7.11.0",
-    "eslint-config-airbnb": "16.1.0",
-    "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-jsx-a11y": "6.0.2",
-    "eslint-plugin-react": "7.4.0"
+    "eslint": "7.26.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.23.2",
+    "eslint-plugin-react-hooks": "4.2.0"
   },
   "browserslist": {
     "production": [
