--- a/.editorconfig
+++ b/.editorconfig
@@ -7,7 +7,7 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{css,less,scss,js,json,jsx,vue}]
+[*.{css,less,scss,js,json,jsx,vue,ts,tsx}]
 indent_size = 2
 
 [*.md]
