--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "classnames": "^2.3.1",
     "firebase": "^8.2.10",
     "moment": "^2.20.1",
-    "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -24,12 +23,10 @@
     "typescript": "^4.2.4"
   },
   "scripts": {
-    "build-css": "node-sass-chokidar src/styles/style.scss -o src/styles",
-    "watch-css": "npm run build-css && node-sass-chokidar src/styles/style.scss -o src/styles --watch --recursive",
     "start-js": "react-scripts start",
-    "start": "npm-run-all -p watch-css start-js",
+    "start": "npm-run-all start-js",
     "build-js": "react-scripts build",
-    "build": "npm-run-all build-css build-js",
+    "build": "npm-run-all build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
