--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-scripts": "4.0.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.2.0",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "node-sass-chokidar": "^1.3.0"
   },
   "scripts": {
     "start-js": "react-scripts start",
