--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.3",
+    "chart.js": "^3.2.1",
     "classnames": "^2.3.1",
     "firebase": "^8.2.10",
     "moment": "^2.20.1",
+    "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
@@ -20,8 +23,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.2.0",
-    "typescript": "^4.2.4",
-    "node-sass-chokidar": "^1.3.0"
+    "typescript": "^4.2.4"
   },
   "scripts": {
     "start-js": "react-scripts start",
