--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,9 +3,20 @@
   "name": "MoonStreet: Your crypto companion",
   "icons": [
     {
-      "src": "favicon.png",
+      "src": "maskable_icon_x48.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
+    },
+    {
+      "src": "maskable_icon_x512.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    },
+    {
+      "src": "maskable_icon_x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
   "start_url": "./index.html",
